--- a/Copy_of_TugasClass.ipynb
+++ b/Copy_of_TugasClass.ipynb
@@ -47,7 +47,7 @@
       "cell_type": "code",
       "source": [
         "class Senjata:\n",
-        "  def _init_ (self, nama, poin):\n",
+        "  def __init__ (self, nama, poin):\n",
         "    self.nama = nama\n",
         "    self.poin = poin\n",
         "\n",
@@ -71,14 +71,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "JC6f_oE5Qhjt"
       },
       "outputs": [],
       "source": [
         "class Player:\n",
-        "  def _init_(self, id, nama, skor, nyawa, senjata):\n",
+        "  def __init__(self, id, nama, skor, nyawa, senjata):\n",
         "    self.id = id\n",
         "    self.nama = nama\n",
         "    self.skor = skor\n",
@@ -116,7 +116,7 @@
         "    nama = 'Jojo',\n",
         "    skor = 0,\n",
         "    nyawa = 5,\n",
-        "    senjata = Senjata(nama = \"PISTOL\", poin = 10))\n",
+        "    senjata = Senjata(nama = \"pistol\", poin = 10))\n",
         "player1.mulai()\n",
         "player1.move()\n",
         "player1.senjata.tembak()"
@@ -124,22 +124,20 @@
       "metadata": {
         "id": "b-sH4vg5KE1p",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 245
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1aa16017-411e-4a62-8ff1-8222c91f9a5b"
+        "outputId": "2cbb1f95-1b60-4d1d-9443-f87fbdef2700"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-11b6e1ea50e2>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mskor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mnyawa\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     senjata = Senjata(nama = \"PISTOL\", poin = 10))\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mplayer1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmulai\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mplayer1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: Senjata() takes no arguments"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Player Jojo dengan skor 0\n",
+            "Memiliki senjata pistol dengan poin 10\n",
+            "BOYAHH\n",
+            "DOR!!\n"
           ]
         }
       ]
